- typo and permissions - gitignore - increased memory
Signed-off-by: Icaro Camelo <icarorvc@gmail.com>